--- a/index.html
+++ b/index.html
@@ -309,8 +309,32 @@
         </section>
 
 
-        <section id="About-Us">
-
+        <section id="About-Us" class="About-Us">
+            <div class="About-content">
+                <div class="About-img">
+                    <img src="asset/logo-removebg-preview.png" alt="Main-book-image">
+                </div>
+                <div class="About-con">
+                    <h2>Trade Tech Titans</h2>
+                    <p>At Trade Tech Titans, we are a thriving community of passionate traders dedicated to sharing real-world experiences and insights. Through engaging reels and content, we simplify complex trading concepts to help our growing online audience better understand the art of trading.</p>  
+                    <p>Since our inception on Instagram in 2023, we've grown rapidly, empowering over 100 students to navigate the markets with confidence. Now in 2024, with a community of more than 35,000 members, we continue to make trading accessible to everyone, offering valuable lessons from seasoned traders and a supportive space for all levels of expertise. Join us on this exciting journey towards financial freedom!</p>
+                </div>
+            </div>
+        </section>
+        <!-- <span class="coll">
+            <img src="asset/3517281.webp" alt="">
+        </span> -->
+        <section class="About-Us">
+            <div class="About-content">
+                <div class="About-con">
+                    <h2>Skill With Earn</h2>
+                    <p>At Trade Tech Titans, we are a thriving community of passionate traders dedicated to sharing real-world experiences and insights. Through engaging reels and content, we simplify complex trading concepts to help our growing online audience better understand the art of trading.</p>  
+                    <p>Since our inception on Instagram in 2023, we've grown rapidly, empowering over 100 students to navigate the markets with confidence. Now in 2024, with a community of more than 35,000 members, we continue to make trading accessible to everyone, offering valuable lessons from seasoned traders and a supportive space for all levels of expertise. Join us on this exciting journey towards financial freedom!</p>
+                </div>
+                <div class="About-img">
+                    <img  src="asset/Asset 2SunilDesigns.webp" alt="Main-book-image">
+                </div>
+            </div>
         </section>
 
 
