--- a/index.html
+++ b/index.html
@@ -9,209 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <!-- <style>
-        :root{
-            --green: #06D800;
-            --black: #191919;
-            --yellow: #f5dc72;
-            --white: #fcfcfc;
-        }
-        *{
-            margin: 0px;
-            padding: 0px;
-            box-sizing: border-box;
-            font-family: poppins;
-        }
-        html{
-            scroll-behavior: smooth;
-            overflow-x: hidden;
-            overflow-y: scroll;
-        }
-        body{
-            width: 100vw;
-            background-color: var(--black);
-            display: flex;
-            justify-content: center;
-        }
-        header{
-            width: 60%;
-            height: 100px;
-            position: fixed;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 2024;
-        }
-        nav{
-            height: 70px;
-            width: 90%;
-            border: 2px solid var(--yellow);
-            backdrop-filter: blur(30px);
-            background-color: transparent;
-            border-radius: 12px;
-            color: var(--white);
-            font-size: 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 40px;
-            z-index: 2024;
-            /* animation: nav 3s linear 0s infinite alternate-reverse; */
-        }
-        nav a{
-            color: var(--yellow);
-            text-decoration: none;
-            font-weight: bold;
-            transition: all 0.5s;
-        }
-        nav a:hover{
-            text-shadow: 1px 1px 10px var(--green);
-            color: var(--white);
-        }
-        /* @keyframes nav{
-            0%{box-shadow: -10px -10px 10px var(--green);}
-            25%{box-shadow: 10px -10px  10px var(--green);}
-            50%{box-shadow: 10px 10px  10px var(--green);}
-            100%{box-shadow: -10px 10px  10px var(--green);}
-        } */
-        main{
-            height: 100%;
-            width: 100vw;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        #Home{
-            min-height: 900px;
-            height: 100vh;
-            max-width: 900px;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-        }
-        .lottie{
-            width: 600px;
-            height: 600px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .content {
-            height: 100px;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-	        position: relative;
-        }
-        .content h2 {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-	        color: var(--white);
-	        font-size: 4em;
-	        position: absolute;
-        }
-
-        .content h2:nth-child(1) {
-	        color: transparent;
-	        -webkit-text-stroke: 1px var(--green);
-        }       
-
-        .content h2:nth-child(2) {
-	        color: #34c52f;
-	        animation: animate 4s ease-in-out infinite;
-        }
-
-        @keyframes animate {
-	        0%,
-	        100% {
-		    clip-path: polygon(
-			    0% 45%,
-			    16% 44%,
-			    33% 50%,
-			    54% 60%,
-			    70% 61%,
-			    84% 59%,
-			    100% 52%,
-			    100% 100%,
-			    0% 100%
-		    );
-	        }
-
-	        50% {
-		        clip-path: polygon(
-			        0% 60%,
-			        15% 65%,
-			        34% 66%,
-			        51% 62%,
-			        67% 50%,
-			        84% 45%,
-			        100% 46%,
-			        100% 100%,
-			        0% 100%
-		        );
-	        }
-        }
-
-        #Products{
-            height: 100vh;
-            min-height: fit-content;
-            max-width: 1000px;
-            width: 100%;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            margin-top: 100px;
-        }
-        .Headings{
-            height: 13%;
-            font-size: 5em;
-            text-align: center;
-            color: var(--black);
-            -webkit-text-stroke: 2px var(--yellow);
-        }
-        .pro-Books-list{
-            height: 500px;
-            margin-top: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex-wrap: wrap;
-        }
-        .img-book{
-            margin: 10px;
-            height: 400px;
-            width: 300px;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
-        .img-book img{
-            height: 300px;
-            width: 300px;
-            background: var(--white);
-            border-radius: 25px;
-        }
-        .img-book p{
-            align-self: flex-start;
-            margin: 10px;
-            color: var(--white);
-        }
-        .img-book a{
-            height: fit-content;
-            width: fit-content;
-            text-decoration: none;
-            color: var(--green);
-            padding: 10px 15px;
-            border: 2px solid var(--green);
-            border-radius: 12px;
-        }
-    </style> -->
 </head>
 <body>
     <header>
@@ -224,17 +21,17 @@
     </header>
     <main>
         <div class="fix-img1">  
-            <img style="height: 700px;" src="asset/logo-removebg-preview.png" alt="tradetechlogo">        
+            <img style="height: 700px;" loading="lazy" src="asset/logo-removebg-preview.png" alt="tradetechlogo">        
         </div>
         <div class="fix-img2">  
-            <img style="height: 500px;" src="asset/Asset 2SunilDesigns.webp" alt="tradetechlogo">        
+            <img style="height: 500px;" loading="lazy" src="asset/Asset 2SunilDesigns.webp" alt="tradetechlogo">        
         </div>
 
 
         <section id="Home">
             <div class="home-collbration">
                 <h1>Trade Tech Titans</h1> 
-                <img height="100px" src="asset/2764534.webp" alt="hand Shake image"> 
+                <img height="100px" loading="lazy" src="asset/2764534.webp" alt="hand Shake image"> 
                 <h1>Skill With Earn</h1>
             </div>
             <div class="content">
@@ -254,7 +51,7 @@
         <section id="experts">
             <div class="exp-main">
                 <div class="exp-img">
-                    <img src="asset/Book Mockup2.png" alt="Main-book-image">
+                    <img src="asset/Book Mockup2.png" loading="lazy" alt="Main-book-image">
                 </div>
                 <div class="exp-img">
                     <h2>The 25 Dark Secrets About Trading</h2>
@@ -284,23 +81,23 @@
         <section id="Products">
             <div class="products-content">
                 <H2 class="Headings">Books</H2>
-                <img  width="150px" src="asset/books-animation-download-in-lo-unscreen.gif" alt="Books-animation">
+                <img loading="lazy"  width="150px" src="asset/books-animation-download-in-lo-unscreen.gif" alt="Books-animation">
             </div>
             <div class="pro-Books-list">
                 <div class="img-book">
-                    <img src="asset/Free_Hard_Cover_Book_Mockup__1_-removebg-preview.webp" alt="image-book">
+                    <img loading="lazy" src="asset/Free_Hard_Cover_Book_Mockup__1_-removebg-preview.webp" alt="image-book">
                     <p>Title</p>
                     <p>Price : &#8377; 199/-</p>
                     <a class="butn" href="">Buy Now</a>
                 </div>
                 <div class="img-book">
-                    <img src="asset/Free_Hard_Cover_Book_Mockup__1_-removebg-preview.webp" alt="image-book">
+                    <img loading="lazy" src="asset/Free_Hard_Cover_Book_Mockup__1_-removebg-preview.webp" alt="image-book">
                     <p>tittle</p>
                     <p>Price : &#8377; 249/-</p>
                     <a class="butn" href="">Buy Now</a>
                 </div>
                 <div class="img-book">
-                    <img src="asset/Free_Hard_Cover_Book_Mockup__1_-removebg-preview.webp" alt="image-book">
+                    <img loading="lazy" src="asset/Free_Hard_Cover_Book_Mockup__1_-removebg-preview.webp" alt="image-book">
                     <p>tittle</p>
                     <p>Price : &#8377; 499/-</p>
                     <a class="butn" href="">Buy Now</a>
@@ -312,7 +109,7 @@
         <section id="About-Us" class="About-Us">
             <div class="About-content">
                 <div class="About-img">
-                    <img src="asset/logo-removebg-preview.png" alt="Main-book-image">
+                    <img loading="lazy" src="asset/logo-removebg-preview.png" alt="Main-book-image">
                 </div>
                 <div class="About-con">
                     <h2>Trade Tech Titans</h2>
@@ -321,25 +118,69 @@
                 </div>
             </div>
         </section>
-        <!-- <span class="coll">
-            <img src="asset/3517281.webp" alt="">
-        </span> -->
         <section class="About-Us">
             <div class="About-content">
                 <div class="About-con">
                     <h2>Skill With Earn</h2>
-                    <p>At Trade Tech Titans, we are a thriving community of passionate traders dedicated to sharing real-world experiences and insights. Through engaging reels and content, we simplify complex trading concepts to help our growing online audience better understand the art of trading.</p>  
-                    <p>Since our inception on Instagram in 2023, we've grown rapidly, empowering over 100 students to navigate the markets with confidence. Now in 2024, with a community of more than 35,000 members, we continue to make trading accessible to everyone, offering valuable lessons from seasoned traders and a supportive space for all levels of expertise. Join us on this exciting journey towards financial freedom!</p>
+                    <p>Welcome to Skill With Earn, your gateway to mastering the digital world and securing financial independence. As a premier digital marketing agency and educational platform, we offer a comprehensive range of courses, from digital marketing and social media strategies to financial management, including trading, mutual funds, and other wealth-building techniques. Our goal is to equip you with the skills needed to thrive in today's competitive market while unlocking new income opportunities.</p>
+                        
+                    <p>Skill With Earn is a proud subsidiary of Trade Tech Titans, a renowned community of experts in finance and technology. Founded in February 2024, our mission is to empower individuals with practical, high-demand skills. We have recently opened our doors in Sri Ganganagar, located opposite Om Shai Hospital, where we are committed to delivering top-tier education and mentorship. Join us on your journey to transform your career and financial future with cutting-edge knowledge and proven strategies.</p>
                 </div>
                 <div class="About-img">
-                    <img  src="asset/Asset 2SunilDesigns.webp" alt="Main-book-image">
+                    <img loading="lazy" src="asset/Asset 2SunilDesigns.webp" alt="Main-book-image">
                 </div>
             </div>
         </section>
+<hr>
+        <Section id="founder-message">
+            <div class="found-div">
+                <q>Enhance Skill Before Age Outs!</q>
+                <p>As you start this journey with Skill with Earn, remember that your drive to learn is what sets you apart. The world rewards those who are eager to grow and adapt. Thank you for choosing us to help you on this path. Your trust and hard work keep us motivated to improve every day. Let's tackle challenges together and turn our dreams into reality.</p>
+                <hr class="linehr">
+                <h2>Rahul Bhatiwal</h2>
+                <p>Founder, Skill With Earn</p>
+            </div>
+        </Section>
 
-
-        <section id="#Contact-us">
-            
+<hr>
+        <section id="Contact-us">
+            <div class="container">
+                <div class="text-center">
+                    <h1>Contact Us</h1>
+                    <div>Let's Know how we can Help.</div>
+                </div>
+                <div class="contact-content">
+                    <div class="col-1">
+                        <div class="address-line">
+                            <img loading="lazy" alt="location" src="asset/5232072.webp" class="icon">
+                            <div class="contact-info">
+                                <div class="contact-info-title">Address</div>
+                                <div>Sector 17,Sankar Colony,</div>
+                                <div>Sri Ganganagar, New Rajasthan,</div>
+                                <div>335001.</div>
+                            </div>
+                        </div>
+                        <div class="address-line">
+                            <img loading="lazy" alt="location" src="asset/8341039.webp" class="icon">
+                            <div class="contact-info">
+                                <div class="contact-info-title">Phone</div>
+                                <div>+91 95968 59631</div>
+                            </div>
+                        </div>
+                        <div class="address-line">
+                            <img loading="lazy" alt="location" src="asset/8219379.webp" class="icon">
+                            <div class="contact-info">
+                                <div class="contact-info-title">Email</div>
+                                <div>contact.skillwithearn@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-2">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3458.7272957093783!2d73.88331727619743!3d29.90095742535368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa41dff0d2c9286b5%3A0xd0ab32b52a877d98!2sSkill%20With%20Earn!5e0!3m2!1sen!2sin!4v1725965394205!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+                <div class="copyright">© 2025 by Trade Tech Titans x Skill With Earn</a></div>
+            </div>
         </section>
     </main>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
