--- a/index.html
+++ b/index.html
@@ -20,14 +20,12 @@
         </nav>
     </header>
     <main>
-        <div class="fix-img1">  
+        <div class="fix-img1 fix-img">  
             <img style="height: 700px;" loading="lazy" src="asset/logo-removebg-preview.png" alt="tradetechlogo">        
         </div>
-        <div class="fix-img2">  
-            <img style="height: 500px;" loading="lazy" src="asset/Asset 2SunilDesigns.webp" alt="tradetechlogo">        
+        <div class="fix-img2 fix-img">  
+            <img style="height: 500px;" loading="lazy" src="asset/Asset 2SunilDesigns.webp" alt="Skill With Earn Logo">        
         </div>
-
-
         <section id="Home">
             <div class="home-collbration">
                 <h1>Trade Tech Titans</h1> 
@@ -46,7 +44,6 @@
                 </lottie-player>
             </div>
         </section>
-
         <hr>
         <section id="experts">
             <div class="exp-main">
@@ -55,7 +52,7 @@
                 </div>
                 <div class="exp-img">
                     <h2>The 25 Dark Secrets About Trading</h2>
-                    <p>Unveil the 25 Dark Secrets of Trading - a concise guide to mastering the art of high-stakes investing. This eBook offers exclusive insights, proven strategies, and untold tactics used by top traders to stay ahead in the market. Elevate your trading game with luxury wisdom, distilled into simple, actionable steps.</p>
+                    <p class="com-para">Unveil the 25 Dark Secrets of Trading - a concise guide to mastering the art of high-stakes investing. This eBook offers exclusive insights, proven strategies, and untold tactics used by top traders to stay ahead in the market. Elevate your trading game with luxury wisdom, distilled into simple, actionable steps.</p>
                     <ul class="custom-emogi">
                         <li>Learn Form Experts</li>
                         <li>Quality Content</li>
@@ -68,7 +65,7 @@
                         <li>Long-Term Wealth</li>
                         <li>Files includes ebook & PDF</li>
                     </ul>
-                    <p style="font-size: 32px; font-weight: bold;">Original Price <span style="color: #f5dc72;"><del>₹9,999</del></span> — Now Just <span style="color: #06D800;">₹499</span> for a <span style="color: red;">Limited Time!</span></p>
+                    <p class="price">Original Price <span style="color: #f5dc72;"><del>₹4,999</del></span> — Now Just <span style="color: #06D800;">₹499</span> for a <span style="color: red;">Limited Time!</span></p>
                     <span style="display: flex; justify-content: end;">
                         <a class="butn" href="#Products">Buy Now</a>
                     </span>
@@ -76,8 +73,6 @@
             </div>
         </section>
         <hr>
-
-
         <section id="Products">
             <div class="products-content">
                 <H2 class="Headings">Books</H2>
@@ -104,8 +99,6 @@
                 </div>
             </div>
         </section>
-
-
         <section id="About-Us" class="About-Us">
             <div class="About-content">
                 <div class="About-img">
@@ -113,8 +106,8 @@
                 </div>
                 <div class="About-con">
                     <h2>Trade Tech Titans</h2>
-                    <p>At Trade Tech Titans, we are a thriving community of passionate traders dedicated to sharing real-world experiences and insights. Through engaging reels and content, we simplify complex trading concepts to help our growing online audience better understand the art of trading.</p>  
-                    <p>Since our inception on Instagram in 2023, we've grown rapidly, empowering over 100 students to navigate the markets with confidence. Now in 2024, with a community of more than 35,000 members, we continue to make trading accessible to everyone, offering valuable lessons from seasoned traders and a supportive space for all levels of expertise. Join us on this exciting journey towards financial freedom!</p>
+                    <p class="com-para">At Trade Tech Titans, we are a thriving community of passionate traders dedicated to sharing real-world experiences and insights. Through engaging reels and content, we simplify complex trading concepts to help our growing online audience better understand the art of trading.</p>  
+                    <p class="com-para">Since our inception on Instagram in 2023, we've grown rapidly, empowering over 100 students to navigate the markets with confidence. Now in 2024, with a community of more than 35,000 members, we continue to make trading accessible to everyone, offering valuable lessons from seasoned traders and a supportive space for all levels of expertise. Join us on this exciting journey towards financial freedom!</p>
                 </div>
             </div>
         </section>
@@ -122,27 +115,26 @@
             <div class="About-content">
                 <div class="About-con">
                     <h2>Skill With Earn</h2>
-                    <p>Welcome to Skill With Earn, your gateway to mastering the digital world and securing financial independence. As a premier digital marketing agency and educational platform, we offer a comprehensive range of courses, from digital marketing and social media strategies to financial management, including trading, mutual funds, and other wealth-building techniques. Our goal is to equip you with the skills needed to thrive in today's competitive market while unlocking new income opportunities.</p>
+                    <p class="com-para">Welcome to Skill With Earn, your gateway to mastering the digital world and securing financial independence. As a premier digital marketing agency and educational platform, we offer a comprehensive range of courses, from digital marketing and social media strategies to financial management, including trading, mutual funds, and other wealth-building techniques. Our goal is to equip you with the skills needed to thrive in today's competitive market while unlocking new income opportunities.</p>
                         
-                    <p>Skill With Earn is a proud subsidiary of Trade Tech Titans, a renowned community of experts in finance and technology. Founded in February 2024, our mission is to empower individuals with practical, high-demand skills. We have recently opened our doors in Sri Ganganagar, located opposite Om Shai Hospital, where we are committed to delivering top-tier education and mentorship. Join us on your journey to transform your career and financial future with cutting-edge knowledge and proven strategies.</p>
+                    <p class="com-para">Skill With Earn is a proud subsidiary of Trade Tech Titans, a renowned community of experts in finance and technology. Founded in February 2024, our mission is to empower individuals with practical, high-demand skills. We have recently opened our doors in Sri Ganganagar, located opposite Om Shai Hospital, where we are committed to delivering top-tier education and mentorship. Join us on your journey to transform your career and financial future with cutting-edge knowledge and proven strategies.</p>
                 </div>
                 <div class="About-img">
                     <img loading="lazy" src="asset/Asset 2SunilDesigns.webp" alt="Main-book-image">
                 </div>
             </div>
         </section>
-<hr>
+        <hr>
         <Section id="founder-message">
             <div class="found-div">
                 <q>Enhance Skill Before Age Outs!</q>
-                <p>As you start this journey with Skill with Earn, remember that your drive to learn is what sets you apart. The world rewards those who are eager to grow and adapt. Thank you for choosing us to help you on this path. Your trust and hard work keep us motivated to improve every day. Let's tackle challenges together and turn our dreams into reality.</p>
+                <p class="com-para">As you start this journey with Skill with Earn, remember that your drive to learn is what sets you apart. The world rewards those who are eager to grow and adapt. Thank you for choosing us to help you on this path. Your trust and hard work keep us motivated to improve every day. Let's tackle challenges together and turn our dreams into reality.</p>
                 <hr class="linehr">
                 <h2>Rahul Bhatiwal</h2>
                 <p>Founder, Skill With Earn</p>
             </div>
         </Section>
-
-<hr>
+        <hr>
         <section id="Contact-us">
             <div class="container">
                 <div class="text-center">
