--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <section id="Home">
             <div class="home-collbration">
                 <h1>Trade Tech Titans</h1> 
-                <img height="100px" loading="lazy" src="asset/2764534.webp" alt="hand Shake image"> 
+                <img class="hand-img" loading="lazy" src="asset/2764534.webp" alt="hand Shake image"> 
                 <h1>Skill With Earn</h1>
             </div>
             <div class="content">
@@ -45,9 +45,9 @@
             </div>
         </section>
         <hr>
-        <section id="experts">
+        <section id="experts" class="experts">
             <div class="exp-main">
-                <div class="exp-img">
+                <div class="exp-img main-book">
                     <img src="asset/Book Mockup2.png" loading="lazy" alt="Main-book-image">
                 </div>
                 <div class="exp-img">
@@ -73,10 +73,10 @@
             </div>
         </section>
         <hr>
-        <section id="Products">
+        <section id="Products" class="Products">
             <div class="products-content">
                 <H2 class="Headings">Books</H2>
-                <img loading="lazy"  width="150px" src="asset/books-animation-download-in-lo-unscreen.gif" alt="Books-animation">
+                <img loading="lazy"  src="asset/books-animation-download-in-lo-unscreen.gif" alt="Books-animation">
             </div>
             <div class="pro-Books-list">
                 <div class="img-book">
@@ -112,14 +112,14 @@
             </div>
         </section>
         <section class="About-Us">
-            <div class="About-content">
+            <div class="About-content sweAbout">
                 <div class="About-con">
                     <h2>Skill With Earn</h2>
                     <p class="com-para">Welcome to Skill With Earn, your gateway to mastering the digital world and securing financial independence. As a premier digital marketing agency and educational platform, we offer a comprehensive range of courses, from digital marketing and social media strategies to financial management, including trading, mutual funds, and other wealth-building techniques. Our goal is to equip you with the skills needed to thrive in today's competitive market while unlocking new income opportunities.</p>
                         
                     <p class="com-para">Skill With Earn is a proud subsidiary of Trade Tech Titans, a renowned community of experts in finance and technology. Founded in February 2024, our mission is to empower individuals with practical, high-demand skills. We have recently opened our doors in Sri Ganganagar, located opposite Om Shai Hospital, where we are committed to delivering top-tier education and mentorship. Join us on your journey to transform your career and financial future with cutting-edge knowledge and proven strategies.</p>
                 </div>
-                <div class="About-img">
+                <div class="About-img sweImg">
                     <img loading="lazy" src="asset/Asset 2SunilDesigns.webp" alt="Main-book-image">
                 </div>
             </div>
